[package]
name = "bybit-rs-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
thiserror = "1.0.50"
url = "2.4.1"
tokio-tungstenite = "0.20.1"
lazy_static = "1.4"
hex = "0.4.3"
ring = "0.17.5"
boolinator = "2.4"
tokio = { version = "1.28", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
csv = "1.2"
env_logger = "0.10"
tracing = { version = "0.1", features = ["release_max_level_debug", "log"] }
tokio-test = "0.4"